Fix header menu spacing

--- a/picoCTF-web/web/css/main.css
+++ b/picoCTF-web/web/css/main.css
@@ -66,7 +66,10 @@
   #nav-profile-container {
     position: absolute;
     top: 0;
-    right: 10%;
+    right: 0;
+  }
+  .navbar-collapse {
+    position: relative;
   }
 }
 
@@ -155,6 +158,12 @@
 
 a.navbar-brand {
     max-width: 250px;
+}
+
+@media (min-width: 768px) {
+  .navbar-static-top {
+    min-height: 100px !important;
+  }
 }
 
 .header-logo {
